--- a/dms-web/package.json
+++ b/dms-web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "clipboard": "^2.0.8",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.3",
     "sql-formatter": "^2.3.3",
