添加README和构建镜像的文件

--- a/dms-app/pom.xml
+++ b/dms-app/pom.xml
@@ -223,7 +223,7 @@
 				<directory>src/main/resources</directory>
 			</resource>
 			<resource>
-				<directory>../y-shell-web/dist</directory>
+				<directory>../dms-web/dist</directory>
 				<!--<includes>
                     <include>*.html</include>
                 </includes>-->
